--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -5,8 +5,8 @@
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/lib"/>
-        <property name="context-root" value="celcom"/>
         <property name="java-output-path" value="/cmp/target/classes"/>
         <property name="component.exclusion.patterns" value="**/slf4j-api-1.5.8.jar,**/jcl104-over-slf4j-1.4.2.jar,**/loancalculator/ejb/LoanCalculatorBean.*,**/loancalculator/initializers/"/>
+        <property name="context-root" value="cmp"/>
     </wb-module>
 </project-modules>
